--- a/index.html
+++ b/index.html
@@ -35,5 +35,53 @@
         <button>Buy Now</button>
       </div>
     </section>
+    <section id="about">
+      <div class="container">
+        <h1><span>o</span>ur adven<span>ture</span></h1>
+        <p>A cup of coffee probably won't solve your problems, but it's nice to have anyway.</p>
+        <button>contact us</button>
+      </div>
+    </section>
+    <section id="products">
+      <h1><span>Pro</span>duct<span>s</span></h1>
+      <div class="products">
+        <div class="product">
+          <div class="img">
+            <img src="img/Chino1.jpg">
+          </div>
+          <div class="price">€3.50<div>
+        </div>
+        <div class="product">
+          <div class="img">
+            <img src="img/espresso.jpg">
+          </div>
+          <div class="price">€2.50</div>
+        </div>
+        <div class="product"><div class="img">
+          <img src="img/Latte.jpg">
+        </div>
+        <div class="price"></div></div>
+        <div class="product">
+          <div class="img">
+            <img src="img/Frappe.jpg">
+          </div>
+          <div class="price">€3.00</div>
+        </div>
+        <div class="product">
+          <div class="img">
+            <img src="img/MentorCoffee.jpg">
+          </div>
+          <div class="price">€4.50<div>
+        </div>
+        <div class="product">
+          <div class="img">
+            <img src="img/The coffee of the mechanic.jpg">
+          </div>
+          <div class="price">€5.00</div>
+        </div>
+      </div>
+    </section>
+    
+    
   </body>
 </html>
