--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
       crossorigin="anonymous"
     />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="scripts.js"></script>
   </head>
   <body>
     <nav class="navbar">
@@ -47,40 +49,42 @@
       <div class="products">
         <div class="product">
           <div class="img">
-            <img src="img/Chino1.jpg">
-          </div>
-          <div class="price">€3.50<div>
-        </div>
-        <div class="product">
-          <div class="img">
             <img src="img/espresso.jpg">
           </div>
           <div class="price">€2.50</div>
         </div>
-        <div class="product"><div class="img">
-          <img src="img/Latte.jpg">
+        <div class="product">
+          <div class="img">
+            <img src="img/Cappucino.jpg">
+          </div>
+          <div class="price">€2.50</div>
         </div>
-        <div class="price"></div></div>
         <div class="product">
           <div class="img">
             <img src="img/Frappe.jpg">
           </div>
           <div class="price">€3.00</div>
         </div>
-        <div class="product">
-          <div class="img">
-            <img src="img/MentorCoffee.jpg">
-          </div>
-          <div class="price">€4.50<div>
-        </div>
-        <div class="product">
-          <div class="img">
-            <img src="img/The coffee of the mechanic.jpg">
-          </div>
-          <div class="price">€5.00</div>
-        </div>
       </div>
     </section>
+    <footer class="footer">
+      <div class="row">
+        <div class="cl">
+          <div class="copyright">
+            <a class="logo-footer"><i class="fas fa-coffee"></i></a>
+            <p>Made by Fresh</p>
+          </div>
+        </div>
+        <div class="cl">
+          <div class="address">Saint George Chapel, National Road 41223<br>Larisa Greece</div>
+          <div class="s-m">
+            <a><i class="fab fa-facebook-f"></i></a>
+            <a><i class="fab fa-instagram"></i></a>
+            <a><i class="fab fa-twitter"></i></a>
+          </div>
+        </div>
+      </div>
+    </footer>
     
     
   </body>
